--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -33,7 +33,9 @@
         <div class="row" style="padding-top: 100px;">
             <div class="col-sm-1"></div>
             <div class="col-sm-10">
-                <p th:text="${title}" class="h1" style="color: white;text-align: left;font-family: Arial, Helvetica, sans-serif;font-size: xx-large;"></p>
+                <p th:text="${title}" class="h1"
+                    style="color: white;text-align: left;font-family: Arial, Helvetica, sans-serif;font-size: xx-large;">
+                </p>
                 <div style="display: inline-flex;">
                     <div th:if="${session.userEmail != null}">
                         <a th:href="@{/user/}"
@@ -49,7 +51,9 @@
                         </a>
                     </div>
                 </div>
-                <p th:text="' / '+${title}" style="color: white;display: inline;font-family: Arial, Helvetica, sans-serif;font-size: large;"></p>
+                <p th:text="' / '+${title}"
+                    style="color: white;display: inline;font-family: Arial, Helvetica, sans-serif;font-size: large;">
+                </p>
             </div>
         </div>
 
@@ -101,9 +105,22 @@
                     <div class="card" style="width:300px;" data-mdb-toggle="animation" data-mdb-animation-reset="true"
                         data-mdb-animation="slide-right">
                         <button type="button" data-bs-toggle="modal" th:data-bs-target="|#bookModal${status.index}|">
-                            <div style="height: 400px; overflow: hidden;">
-                                <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
-                                    style="width: 100%; height: 100%; object-fit: cover;">
+                            <div th:if="${book.key.SL}!=0">
+                                <div style="height: 400px; overflow: hidden;">
+                                    <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
+                                        style="width: 100%; height: 100%; object-fit: cover;">
+
+                                </div>
+                            </div>
+                            <div th:unless="${book.key.SL}!=0">
+                                <div style="height: 400px; overflow: hidden;">
+                                    <img class="card-img-top" th:src="@{'/images/'+${book.key.img}}"
+                                        style="width: 100%; height: 100%; object-fit: cover;opacity: 0.7;">
+                                    <div
+                                        style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: #333; font-size: xx-large; font-weight: bold;">
+                                        Hết Hàng
+                                    </div>
+                                </div>
                             </div>
                         </button>
                         <div class="modal fade" th:id="|bookModal${status.index}|">
@@ -112,8 +129,21 @@
                                 <div class="modal-content">
                                     <div class="row">
                                         <div class="col-sm-4">
-                                            <img th:src="@{'/images/'+${book.key.img}}"
-                                                style="background-size: cover;background-position: center;width: 100%;height: 100%;">
+                                            <div th:if="${book.key.SL}!=0">
+                                                <img th:src="@{'/images/'+${book.key.img}}"
+                                                    style="background-size: cover; background-position: center; width: 100%; height: 100%;">
+                                            </div>
+                                            <div th:unless="${book.key.SL}!=0" style="position: relative;">
+                                                <img th:src="@{'/images/'+${book.key.img}}"
+                                                    style="background-size: cover; background-position: center; width: 100%; height: 100%;opacity: 0.7;">
+                                                <div
+                                                    style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
+                                                    <div
+                                                        style="color: #333; padding: 10px; font-size: xx-large; font-weight: bold; font-family: Arial, Helvetica, sans-serif;">
+                                                        Hết Hàng
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                         <div class="col-sm-8">
                                             <!-- Modal Header -->
@@ -201,16 +231,30 @@
                                                                     </a>
                                                                 </div>
                                                                 <div th:unless="${session.userEmail==null}">
-                                                                    <button type="submit"
-                                                                        style="font-size: 25px;color:#01a14b;border: none;">
-                                                                        <i class="fa-solid fa-cart-shopping"
-                                                                            style="font-weight: bolder;">
-                                                                            <p
-                                                                                style="display: inline-flex;font-family:'Times New Roman', Times, serif">
-                                                                                THÊM VÀO GIỎ HÀNG
-                                                                            </p>
-                                                                        </i>
-                                                                    </button>
+                                                                    <div th:if="${book.key.SL}!=0">
+                                                                        <button type="submit"
+                                                                            style="font-size: 25px;color:#01a14b;border: none;">
+                                                                            <i class="fa-solid fa-cart-shopping"
+                                                                                style="font-weight: bolder;">
+                                                                                <p
+                                                                                    style="display: inline-flex;font-family:'Times New Roman', Times, serif">
+                                                                                    THÊM VÀO GIỎ HÀNG
+                                                                                </p>
+                                                                            </i>
+                                                                        </button>
+                                                                    </div>
+                                                                    <div th:unless="${book.key.SL}!=0">
+                                                                        <a onclick="alert('Hết Hàng')"
+                                                                            style="font-size: 25px;color:#01a14b;border: none;cursor: pointer;">
+                                                                            <i class="fa-solid fa-cart-shopping"
+                                                                                style="font-weight: bolder;" >
+                                                                                <p
+                                                                                    style="display: inline-flex;font-family:'Times New Roman', Times, serif">
+                                                                                    THÊM VÀO GIỎ HÀNG
+                                                                                </p>
+                                                                            </i>
+                                                                        </a>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
@@ -257,16 +301,24 @@
                                             <i class="fa-solid fa-cart-shopping" style="font-size:x-large;"></i></a>
                                     </div>
                                     <div th:unless="${session.userEmail==null}">
-                                        <form th:action="@{/cart/add/__${book.key.id}__}" th:method="post">
-                                            <input type="hidden" name="SL" value="1">
-                                            <button type="submit" style="padding-right: 0px;float: right;"
+                                        <div th:if="${book.key.SL}!=0">
+                                            <form th:action="@{/cart/add/__${book.key.id}__}" th:method="post">
+                                                <input type="hidden" name="SL" value="1">
+                                                <button type="submit" style="padding-right: 0px;float: right;"
+                                                    onmouseover="this.style.color='#01a14b';"
+                                                    onmouseout="this.style.color='black';">
+                                                    <i class="fa-solid fa-cart-shopping"
+                                                        style="font-size:x-large;"></i></button>
+                                            </form>
+                                        </div>
+                                        <div th:unless="${book.key.SL}!=0">
+                                            <button onclick="alert('Hết Hàng')" style="padding-right: 0px;float: right;"
                                                 onmouseover="this.style.color='#01a14b';"
                                                 onmouseout="this.style.color='black';">
                                                 <i class="fa-solid fa-cart-shopping"
                                                     style="font-size:x-large;"></i></button>
-                                        </form>
+                                        </div>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
